fixed healthcheck endpoint
