# routes/router.healthCheck.js
@@ -2,7 +2,7 @@ const express = require("express");
 const db = require("../connectors/db.mysql");
 const router = express.Router();
 
-router.post("/", function (req, res) {
+router.get("/healthcheck", function (req, res) {
     console.log("Checking db connection health")
     db.sequelize
         .authenticate()
